# similie

./: .clang-format  .dev_note  .devnote  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  REUSE.toml  Running.html  annotated.html  annotated_dup.js  antisymmetric__tensor_8hpp_source.html  are__all__same_8hpp_source.html  binomial__coefficient_8hpp_source.html  boundary_8hpp_source.html  chain_8hpp_source.html  character_8hpp_source.html  clamp__to__domain_8hpp_source.html  classes.html  classgenerate__cpp__constitutive__law_1_1ConstitutiveLawDefinition-members.html  classgenerate__cpp__constitutive__law_1_1ConstitutiveLawDefinition.html  classgenerate__cpp__constitutive__law_1_1ConstitutiveLawDefinition__coll__graph.map  classgenerate__cpp__constitutive__law_1_1ConstitutiveLawDefinition__coll__graph.md5  classgenerate__cpp__hamiltonian_1_1HamiltonianDefinition-members.html  classgenerate__cpp__hamiltonian_1_1HamiltonianDefinition.html  classgenerate__cpp__hamiltonian_1_1HamiltonianDefinition__coll__graph.map  classgenerate__cpp__hamiltonian_1_1HamiltonianDefinition__coll__graph.md5  classgenerate__cpp__hamiltonian_1_1SymbolicFunctionDefinition-members.html  classgenerate__cpp__hamiltonian_1_1SymbolicFunctionDefinition.html  classgenerate__cpp__hamiltonian_1_1SymbolicFunctionDefinition__coll__graph.map  classgenerate__cpp__hamiltonian_1_1SymbolicFunctionDefinition__coll__graph.md5  classlinear__magnetostatics_1_1LinearMagneticInductionToMagneticField-members.html  classlinear__magnetostatics_1_1LinearMagneticInductionToMagneticField.html  classlinear__magnetostatics_1_1LinearMagneticInductionToMagneticField__coll__graph.map  classlinear__magnetostatics_1_1LinearMagneticInductionToMagneticField__coll__graph.md5  classlinear__magnetostatics_1_1LinearMagnetostaticsHamiltonian-members.html  classlinear__magnetostatics_1_1LinearMagnetostaticsHamiltonian.html  classlinear__magnetostatics_1_1LinearMagnetostaticsHamiltonian__coll__graph.map  (+705 more)
examples/: 2d_laplacian.cpp  2d_poisson.cpp  2d_scalar_field.cpp  2d_vector_laplacian.cpp  CMakeLists.txt  kretschmann_scalar.cpp  riemann_contraction.cpp  sketch.cpp
examples/free_scalar_field/: 2d_free_scalar_field.cpp  CMakeLists.txt  free_scalar_field_hamiltonian_functor_generator.py  pyproject.toml
examples/onelab_elasticity/: elasticity.silpro  run_similie_onelab.sh  wrench2D.geo  wrench2D_common.pro  wrench_structured.geo
examples/onelab_elasticity/getdp_ref/: Lib_Elast_u.pro  Lib_JacInt.pro
examples/onelab_inductor/: .clang-format-ignore  export_paraview_results.py  inductor.geo  inductor.silpro  inductor2d.geo  inductor3d.geo  inductor3d_bool.geo  inductor_data.geo  run_similie_onelab.sh  similie_linear_magnetostatics.silpro  similie_rectilinear_inductor.geo
examples/onelab_inductor/Inductor/: README.txt  inductor3d_bool.geo
examples/onelab_inductor/getdp_ref/: inductor.pro  magstadyn_a.pro  magstadyn_av_js0_3d.pro
examples/scalar_field/: 2d_scalar_field.cpp  CMakeLists.txt  generate_scalar_field_hamiltonian.py  generate_scalar_field_hamiltonian_functor.py  pyproject.toml  scalar_field_hamiltonian_functor_generator.py
include/similie/exterior/: CMakeLists.txt  boundary.hpp  chain.hpp  coboundary.hpp  cochain.hpp  codifferential.hpp  cosimplex.hpp  exterior.hpp  form.hpp  hodge_star.hpp  laplacian.hpp  local_chain.hpp  simplex.hpp
include/similie/misc/: CMakeLists.txt  are_all_same.hpp  binomial_coefficient.hpp  discrete_element_evaluator.hpp  domain_contains.hpp  factorial.hpp  filled_struct.hpp  macros.hpp  permutation_parity.hpp  portable_stl.hpp  select_from_type_seq.hpp  static_values.hpp  stride.hpp  type_seq_conversion.hpp  unsecure_parallel_deepcopy.hpp
include/similie/tensor/: CMakeLists.txt  antisymmetric_tensor.hpp  character.hpp  determinant.hpp  diagonal_tensor.hpp  dummy_index.hpp  full_tensor.hpp  identity_tensor.hpp  levi_civita_tensor.hpp  lorentzian_sign_tensor.hpp  metric.hpp  prime.hpp  relabelization.hpp  symmetric_tensor.hpp  tensor.hpp  tensor_impl.hpp  tensor_prod.hpp  (+1 more)
onelab_interface/: .clang-format-ignore  CMakeLists.txt  GmshSocket.h  README.md  base_onelab_interface.hpp  elasticity_onelab.hpp  fake_similie_run.cpp  fake_similie_run.hpp  gmsh_structured_grid.hpp  gmsh_structured_msh2.hpp  linear_magnetostatics_onelab.hpp  magnetostatics_onelab.hpp  main.cpp  minimize_strong_formulation_residual_onelab.hpp  onelab.h  onelab_interface.hpp  run_in_docker.sh  scalar_field_with_power_coupling_onelab.hpp
onelab_interface/magnetostatics/: linear_magnetostatics_onelab_interface.hpp  main.cpp
python/: pyproject.toml
src/form/: CMakeLists.txt  boundary.hpp  chain.hpp  coboundary.hpp  cochain.hpp  cosimplex.hpp  form.hpp  simplex.hpp
src/misc/: CMakeLists.txt  are_all_same.hpp  filled_struct.hpp  null_struct.hpp  specialization.hpp  stride.hpp  tuple_helpers.hpp  type_seq_ext.hpp
src/normalization/: CMakeLists.txt  normalization.hpp
src/tensor/: CMakeLists.txt  antisymmetric_tensor.hpp  character.hpp  diagonal_tensor.hpp  full_tensor.hpp  identity_tensor.hpp  lorentzian_sign_tensor.hpp  metric.hpp  metric_tensor.hpp  prime.hpp  symmetric_tensor.hpp  tensor.cpp  tensor.hpp  tensor_impl.hpp  tensor_prod.hpp  young_tableau_tensor.hpp
src/young_tableau/: .CMakeLists.txt.swo  CMakeLists.txt  young_tableau.hpp
tests/: CMakeLists.txt  main.cpp
tests/csr/: CMakeLists.txt  csr.cpp
tests/exterior/: CMakeLists.txt  codifferential.cpp  derivative.cpp  exterior.cpp  full_domain_adjointness.cpp  hodge_star.cpp  laplacian.cpp  laplacian_full_domain_diagnostic.cpp  reduction.cpp  reduction_and_reconstruction.cpp
tests/form/: CMakeLists.txt  form.cpp
tests/mesher/: .mesher.cpp.swp  CMakeLists.txt  mesher.cpp  mesher1d.cpp  mesher2d.cpp
tests/misc/: CMakeLists.txt  discrete_element_evaluator.cpp
tests/onelab_interface/: CMakeLists.txt  fake_similie_run.cpp  magnetostatics.silpro  scalar_field.silpro  silpro.cpp
tests/tensor/: CMakeLists.txt  metric.cpp  tensor.cpp  tensor_field.cpp  tensor_prod.cpp
tests/young_tableau/: CMakeLists.txt  young_tableau.cpp
(+282 files in other folders)
