[build-system]
requires = [
    "setuptools>=61",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "similie"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
    { name = "blegouix", email = "baptistelegouix@gmail.com" }
]

dependencies = [
    "sympy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
packages = ["similie"]

[tool.setuptools.package-data]
example_package = ["py.typed"]
